--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -1386,6 +1386,8 @@ textarea {
 
 .btn-mentor:hover,.btn-mentor:focus {
   text-decoration: none;
+  background-color: #1c599b;
+  color: #fff;
 }
 
 .weekends-schedule-header {
