fix prizes & judging criteria

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -249,18 +249,16 @@
                </br></br>
                <h2>Βραβεία</h2>
                     <ul>
-                        <li>1<sup>ο</sup> Βραβείο – 1000€</li>
-                        <li>2<sup>ο</sup> Βραβείο – 500€</li>
-                        <li>3<sup>ο</sup> Βραβείο – 200€</li>
+                      <li>1<sup>ο</sup> Βραβείο – €900 Μετρητά</li>
+                      <li>2<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
+                      <li>3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
                     </ul>
-                    <h2>Κριτήρια αξιολόγησης</h2>
+                  </br>
+                <h3>Κριτήρια αξιολόγησης</h3>
                     <ul>
-                        <li>Feasibility</li>
-                        <li>Usability</li>
-                        <li>Prototype</li>
-                        <li>Complexity</li>
-                        <li>Interoperability</li>
-                        <li>Maintainability</li>
+                        <li><strong>Εφικτότητα</strong> (Feasibility):</li>
+                        <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability)</li>
+                        <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability)</li>
                     </ul>
                 </div>
               <div id="sponsors">
