--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -244,21 +244,22 @@
               <div id="judges">
                </br></br>
                <h2>Κριτές</h2>
+               <p>Η πενταμελής κριτική επιτροπή θα αποτελείται από μέλη των οργανισμών που υποστηρίζουν το τριήμερο. Η σύνθεση της επιτροπής θα ανακοινωθεί στο παρόν website πριν την έναρξη του 3ημέρου.</p>
               </div>
               <div id="prizes">
                </br></br>
-               <h2>Βραβεία</h2>
+               <h2>Βραβεία</h2></br>
                     <ul>
                       <li>1<sup>ο</sup> Βραβείο – €900 Μετρητά</li>
                       <li>2<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
                       <li>3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
                     </ul>
                   </br>
-                <h3>Κριτήρια αξιολόγησης</h3>
+                <h3>Κριτήρια αξιολόγησης</h3></br>
                     <ul>
-                        <li><strong>Εφικτότητα</strong> (Feasibility):</li>
-                        <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability)</li>
-                        <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability)</li>
+                        <li><strong>Εφικτότητα</strong> (Feasibility):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
+                        <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
+                        <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
                     </ul>
                 </div>
               <div id="sponsors">
