--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -256,6 +256,9 @@
                       <li>3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
                     </ul>
                   </br>
+                <p>*  Εκτός από το χρηματικό έπαθλο οι ομάδες που θα αποφασίσουν να προχωρήσουν περεταίρω στην υλοποίηση της ιδέας τους διασφαλίζουν συμβουλευτική υποστήριξη (mentoring) από τον χορηγό των χρηματικών βραβείων Link Technologies S.A.</p>
+                <p>** H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</p>
+                </br>
                 <h3>Κριτήρια αξιολόγησης</h3>
                 </br></br>
                     <ul>
@@ -263,6 +266,7 @@
                         <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
                         <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
                     </ul>
+
                 </div>
               <div id="sponsors">
                </br></br>
@@ -316,17 +320,18 @@
                                 <h4 class="modal-title">Όροι Συμμετοχής</h4>
                               </div>
                               <div class="modal-body">
-                                <p><strong>1.</strong> Δικαίωμα συμμετοχής έχουν όλοι όσοι ενδιαφέρονται. Προτείνεται η συμμετοχή σε όσους είναι σχετικοί με το αντικείμενο των μεταφορών</p>
-                                <p><strong>2.</strong> Οι συμμετέχοντες θα μετέχουν σε ομάδες με μέγιστο αριθμό τα έξι (6) άτομα.</p>
-                                <p><strong>3.</strong> Η προτεινόμενη λύση θα πρέπει να αναπτυχθεί κατά τη διάρκεια του διαγωνισμού και μόνο ενόσω τα μέλη της ομάδας βρίσκονται στο χώρο διενέργειας του διαγωνισμού.</p>
-                                <p><strong>4.</strong> Σε περίπτωση που η λύση περιλαμβάνει κώδικα εφαρμογής, αυτός θα πρέπει να ανεβαίνει σταδιακά σε repository της Ομάδας στο GitHub. Σε περίπτωση που το έργο είναι πακέτο λογισμικού που προέρχεται από compilation (πχ Mobile App, Software κτλ) εκτός από τον πηγαίο κώδικα που δημιουργεί το compiled αρχείο θα πρέπει στο GitHub να ανέβει και το ίδιο το compiled αρχείο. Εφαρμογές που θα έχουν γίνει με ελάχιστα μόνο commits δύναται να ακυρωθούν από την επιτροπή.</p>
-                                <p><strong>5.</strong> Παρουσίαση κώδικα που δεν έχει αναπτυχθεί από την ομάδα ως κώδικα της ομάδας θα καταλήγει σε αποκλεισμό της ομάδας από το διαγωνισμό.</p>
-                                <p><strong>6.</strong> Η πρωτοτυπία της εφαρμογής και της λύσης, η αλγοριθμική προσέγγιση στο πρόβλημα και η ποιότητα του κώδικα θα ληφθούν υπόψη στην τελική αξιολόγηση.</p>
-                                <p><strong>7.</strong> Ενθαρρύνεται και θα αξιολογηθεί θετικά η χρήση ανοιχτών δεδομένων (Open Data).</p>
-                                <p><strong>8.</strong> Ενθαρρύνεται και θα αξιολογηθεί θετικά η χρήση Web Services (πχ REST APIs) που προσφέρονται δωρεάν από διάφορους παρόχους.</p>
-                                <p><strong>9.</strong> Η νικήτριες ομάδες θα αποφασιστούν από επιτροπή, η σύνθεση της οποίας θα ανακοινωθεί αργότερα.</p>
-                                <p><strong>10.</strong> Ενστάσεις για την απόφαση της επιτροπής δε γίνονται δεκτές.</p>
-                                <p><strong>11.</strong> Συμμετέχοντας στον διαγωνισμό δηλώνετε ότι αποδέχεστε το δικαίωμα των διοργανωτών να προωθήσουν ή να εκμεταλλευτούν εικόνες, βίντεο, ηχητικό υλικό και γενικά multimedia υλικό που θα ληφθεί κατά τη διάρκεια του hackathon στο οποίο ενδέχεται να εμφανίζονται τα μέλη των ομάδων.</p>
+                                <p><strong>1. H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</strong></p>
+                                <p><strong>2.</strong> Δικαίωμα συμμετοχής έχουν όλοι όσοι ενδιαφέρονται. Προτείνεται η συμμετοχή σε όσους είναι σχετικοί με το αντικείμενο των μεταφορών</p>
+                                <p><strong>3.</strong> Οι συμμετέχοντες θα μετέχουν σε ομάδες με μέγιστο αριθμό τα έξι (6) άτομα.</p>
+                                <p><strong>4.</strong> Η προτεινόμενη λύση θα πρέπει να αναπτυχθεί κατά τη διάρκεια του διαγωνισμού και μόνο ενόσω τα μέλη της ομάδας βρίσκονται στο χώρο διενέργειας του διαγωνισμού.</p>
+                                <p><strong>5.</strong> Σε περίπτωση που η λύση περιλαμβάνει κώδικα εφαρμογής, αυτός θα πρέπει να ανεβαίνει σταδιακά σε repository της Ομάδας στο GitHub. Σε περίπτωση που το έργο είναι πακέτο λογισμικού που προέρχεται από compilation (πχ Mobile App, Software κτλ) εκτός από τον πηγαίο κώδικα που δημιουργεί το compiled αρχείο θα πρέπει στο GitHub να ανέβει και το ίδιο το compiled αρχείο. Εφαρμογές που θα έχουν γίνει με ελάχιστα μόνο commits δύναται να ακυρωθούν από την επιτροπή.</p>
+                                <p><strong>6.</strong> Παρουσίαση κώδικα που δεν έχει αναπτυχθεί από την ομάδα ως κώδικα της ομάδας θα καταλήγει σε αποκλεισμό της ομάδας από το διαγωνισμό.</p>
+                                <p><strong>7.</strong> Η πρωτοτυπία της εφαρμογής και της λύσης, η αλγοριθμική προσέγγιση στο πρόβλημα και η ποιότητα του κώδικα θα ληφθούν υπόψη στην τελική αξιολόγηση.</p>
+                                <p><strong>8.</strong> Ενθαρρύνεται και θα αξιολογηθεί θετικά η χρήση ανοιχτών δεδομένων (Open Data).</p>
+                                <p><strong>9.</strong> Ενθαρρύνεται και θα αξιολογηθεί θετικά η χρήση Web Services (πχ REST APIs) που προσφέρονται δωρεάν από διάφορους παρόχους.</p>
+                                <p><strong>10.</strong> Η νικήτριες ομάδες θα αποφασιστούν από επιτροπή, η σύνθεση της οποίας θα ανακοινωθεί αργότερα.</p>
+                                <p><strong>11.</strong> Ενστάσεις για την απόφαση της επιτροπής δε γίνονται δεκτές.</p>
+                                <p><strong>12.</strong> Συμμετέχοντας στον διαγωνισμό δηλώνετε ότι αποδέχεστε το δικαίωμα των διοργανωτών να προωθήσουν ή να εκμεταλλευτούν εικόνες, βίντεο, ηχητικό υλικό και γενικά multimedia υλικό που θα ληφθεί κατά τη διάρκεια του hackathon στο οποίο ενδέχεται να εμφανίζονται τα μέλη των ομάδων.</p>
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
