finally fix modal-body p font size

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -319,7 +319,7 @@
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h4 class="modal-title">Όροι Συμμετοχής</h4>
                               </div>
-                              <div class="modal-body">
+                              <div class="modal-body small">
                                 <p><strong>1. H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</strong></p>
                                 <p><strong>2.</strong> Δικαίωμα συμμετοχής έχουν όλοι όσοι ενδιαφέρονται. Προτείνεται η συμμετοχή σε όσους είναι σχετικοί με το αντικείμενο των μεταφορών</p>
                                 <p><strong>3.</strong> Οι συμμετέχοντες θα μετέχουν σε ομάδες με μέγιστο αριθμό τα έξι (6) άτομα.</p>
