apply general tiny fixes

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -244,7 +244,7 @@
                 </div>
               <div id="judges">
                </br></br>
-               <h2>Κριτές</h2>
+               <h2>Κριτική επιτροπή</h2>
                <p>Η πενταμελής κριτική επιτροπή θα αποτελείται από μέλη των οργανισμών που υποστηρίζουν το τριήμερο. Η σύνθεση της επιτροπής θα ανακοινωθεί στο παρόν website πριν την έναρξη του 3ημέρου.</p>
               </div>
               <div id="prizes">
@@ -266,7 +266,6 @@
                         <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
                         <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
                     </ul>
-
                 </div>
               <div id="sponsors">
                </br></br>
@@ -312,8 +311,6 @@
                           </label>
                           <div id="myModal" class="modal fade" role="dialog">
                             <div class="modal-dialog">
-
-                            <!-- Modal content-->
                             <div class="modal-content">
                               <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -337,10 +334,8 @@
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Κλείσιμο</button>
                               </div>
                             </div>
-
                           </div>
                         </div>
-
                       </div>
                       <button id="register" type="submit" class="btn-form" onclick="ga('send', 'event', 'weekend', 'submission', {'NonInteraction': 1});">{% trans 'Submit' %}</button>
                       <script type="text/javascript">
@@ -354,7 +349,6 @@
                           );
                       </script>
                   </form>
-
                 </div>
             </div>
             <script>
