--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -130,6 +130,28 @@
                       οργανώνοντας διεθνείς κοινοπραξίες για Ευρωπαϊκά έργα.</p>
                     </div>
                 </div>
+                <div class="weekends-mentor-container">
+                    <div class="col-md-2 weekends-mentor">
+                     <img class="weekends-mentor-pic" src="/static/main/img/weekends/mobility/kvavatsoulas.jpg">
+                    </div>
+                    <div class="col-md-10">
+                      <h3>Κώστας Βαβατσούλας</h3></br>
+                      <h4>Τοπογράφος Μηχανικός - Συγκοινωνιολόγος</h4></br>
+                      <a href="#coach-5" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
+                      <p id="coach-5" class="weekends-mentor-bio small collapse">Κάτοχος διπλώματος Α.Τ.Μ. της Πολυτεχνικής Σχολής Α.Π.Θ. (2010) με μία σύντομη περίοδο 3 ετών εργαζόμενος κατά τη διάρκεια των σπουδών σε τεχνικό και μελετητικό γραφείο τοπογράφων
+                      μηχανικών στη Θεσσαλονίκη και απασχολούμενος σε διάφορα έργα και μελέτες όπως την πρώτη φάση της ανάπλασης της Νεας Παραλίας και δημιουργία ΧΥΤΑ στη Νιγρίτα Σερρών. Επιπλέον
+                      εξειδίκευση στα συγκοινωνιακά με μεταπτυχιακό τίτλο από το Τεχνολογικό Πανεπιστήμιο της Δανίας (MSc in Transportation &amp; Logistics, DTU, 2012) και στη συνέχεια μετοίκισε στη Γλασκώβη
+                      Σκωτίας, όπου εργάζεται τα τελευταία 6 χρόνια με σημερινή θέση στη JACOBS Engineering Group ως μηχανικός στο σχεδιασμό και εποπτεία οδικών έργων και συγκοινωνιών, με έμφαση στη
+                      βιώσιμη κινητηκότητα και το σχεδιασμό ποδηλατόδρομων σε τοπικό, εθνικό και παγκόσμιο επίπεδο. Πρόσφατες μελέτες και έργα περιλαμβάνουν: (1) Μελέτη και κατασκευή 5 χλμ
+                      ποδηλατόδρομου στο εθνικό δίκτυο NCN78, ολοκληρώνοντας μία χρόνια προσπάθεια του φορέα και πελάτη Sustrans να ολοκληρώσει μια διαδρομή 380 χλμ συνολικά (Campbeltown – Oban –
+                      Inverness), (2) τεχνική διαβούλευση στο σχεδιαμό ποδηλατικού δικτύου για το Sharjah Urban Planning Council (Ηνωμένα Αραβικά Εμιράτα), (3) ανανέωση του οδηγού προδιαγραφών για
+                      ποδηλατόδρομους (Cycling by Design), (4) μελέτη και σχεδιασμός για σηματοδότηση για την περιφερειακή του Aberdeen ( AWPR ) και ITS στον οδικό άξωνα A9 Perth to Inverness για την
+                      Transport Scotland και (5) μελέτη αξιολόγησης συγκοινωνιακών επιπτώσεων στην περιφέρεια και πόλη του Εδιμβούργου συνοδευόμενη από προτάσεις επίλυσεις σύνδεσης για ανακούφιση του
+                      οδικού δικτύου με έμφαση στις δημόσιες συγκοινωνίες ( SESplan Cross Boundary Study ), σε συνδυασμό με τη μελέτη λειτουργίας και βελτίωσης της περιφερειακής οδού Α720 του
+                      Εδιμβούργου. Εκτός εργασίας δραστηριοποιέιται σαν μέλος της τεχνικής επιτροπής του CIHT Scotland έχοντας διατελέσει χρέη Young Professionals Chair και Deputy Honorary Secretary, ενώ
+                      επίσης είναι συμβεβλημένος STEM Ambassador οργανώντας παρουσιάσεις και λειτουργώντας σαν μέντορας για τον επαγγελματικό προσανατολισμό σε σχολεία και διαγωνισμούς όπως το Go4SET.</p>
+                    </div>
+                </div>
               </div>
               <div id="schedule">
               </br></br>
