make my OCD calm down :P

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-md-10">
                       <h3>Κώστας Βαβατσούλας</h3></br>
-                      <h4>Τοπογράφος Μηχανικός - Συγκοινωνιολόγος</h4></br>
+                      <h4>Τοπογράφος Μηχανικός – Συγκοινωνιολόγος</h4></br>
                       <a href="#coach-6" class="btn-mentor" data-toggle="collapse">Βιογραφικό</a>
                       <p id="coach-6" class="weekends-mentor-bio small collapse">Κάτοχος διπλώματος Α.Τ.Μ. της Πολυτεχνικής Σχολής Α.Π.Θ. (2010) με μία σύντομη περίοδο 3 ετών εργαζόμενος κατά τη διάρκεια των σπουδών σε τεχνικό και μελετητικό γραφείο τοπογράφων
                       μηχανικών στη Θεσσαλονίκη και απασχολούμενος σε διάφορα έργα και μελέτες όπως την πρώτη φάση της ανάπλασης της Νεας Παραλίας και δημιουργία ΧΥΤΑ στη Νιγρίτα Σερρών. Επιπλέον
