add criteria descriptions

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -13,7 +13,7 @@
                         <li><a href="#mentors">Μέντορες</a></li>
                         <li><a href="#schedule">Πρόγραμμα</a></li>
                         <li><a href="#judges">Κριτές</a></li>
-                        <li><a href="#prizes">Έπαθλα</a></li>
+                        <li><a href="#prizes">Βραβεία</a></li>
                         <li><a href="#sponsors">Χορηγοί</a></li>
                         <li><a href="#register">Εγγραφή</a></li>
                     </ol>
@@ -273,9 +273,9 @@
                </br></br>
                <h2>Βραβεία</h2></br>
                     <ul>
-                      <li>1<sup>ο</sup> Βραβείο – €900 Μετρητά</li>
-                      <li>2<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
-                      <li>3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
+                      <li class="h3">1<sup>ο</sup> Βραβείο – €900 Μετρητά</li></br>
+                      <li class="h4">2<sup>ο</sup> Βραβείο – €300 Μετρητά</li></br>
+                      <li class="h4">3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
                     </ul>
                   </br>
                 <p>*  Εκτός από το χρηματικό έπαθλο οι ομάδες που θα αποφασίσουν να προχωρήσουν περεταίρω στην υλοποίηση της ιδέας τους διασφαλίζουν συμβουλευτική υποστήριξη (mentoring) από τον χορηγό των χρηματικών βραβείων Link Technologies S.A.</p>
@@ -284,10 +284,14 @@
                 <h3>Κριτήρια αξιολόγησης</h3>
                 </br></br>
                     <ul>
-                        <li><strong>Εφικτότητα</strong> (Feasibility):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
-                        <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
-                        <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability):<small>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet</small></li>
+                        <li><strong>Εφικτότητα</strong> (Feasibility):<small> Η πρόταση – ιδέα θα πρέπει να είναι εφαρμόσιμη λαμβάνοντας υπόψη τεχνολογικούς και νομικούς περιορισμούς.</small></li>
+                        <li><strong>Περιβαλλοντική Βιωσιμότητα</strong> (Sustainability):<small> Η πρόταση – ιδέα θα πρέπει να έχει θετικό ή ουδέτερο περιβαλλοντικό αποτύπωμα σε όλο το κύκλο ζωής της.</small></li>
+                        <li><strong>Οικονομική Βιωσιμότητα</strong> (Economic Viability):<small> Η πρόταση – ιδέα θα πρέπει να είναι βιώσιμη οικονομικά και με προοπτική κερδοφορίας.</small></li>
                     </ul>
+
+                  <p>Οι προτάσεις –ιδέες  θεματικά πρέπει να ανήκουν στον τομέα των καινοτόμων αστικών μεταφορών προσώπων και αγαθών. Η συγκεκριμένη απαίτηση δεν βαθμολογείται αλλά θα λειτουργήσει σαν προϋπόθεση για να αξιολογηθεί μια πρόταση - ιδέα.</p>
+                  <p>Η κριτική επιτροπή θα συνεδριάσει την Κυριακή 30 Σεπτεμβρίου το απόγευμα αφού παρακολουθήσει τις παρουσιάσεις των συμμετεχόντων. Τα βραβεία θα απονεμηθούν το βράδυ της Κυριακής 30 Σεπτεμβρίου.</p>
+
                 </div>
               <div id="sponsors">
                </br></br>
