fix several again

--- a/main/templates/main/weekends.html
+++ b/main/templates/main/weekends.html
@@ -23,6 +23,7 @@
               <h1>Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές</h1>
                 <div class="weekends-subtitle">28 - 30 Σεπτεμβρίου 2018</div>
                 <div id="overview">
+                </br>
                     <p><strong>Έχετε μια ιδέα σχετικά με τις βιώσιμες αστικές μεταφορές  που θέλετε να προωθήσετε ή ένα πρόβλημα που θέλετε να λύσετε, αλλά δεν ξέρετε από πού να ξεκινήσετε ή από ποιον να ξεκινήσετε;</strong></p>
                     <p>Το Σαββατοκύριακο Καινοτομίας στις Αστικές Μεταφορές (ΣΚΑΜ) είναι το μέρος για να αναζητήσετε μια ομάδα, να δημιουργήσετε το πρωτότυπο της ιδέας σας, να επικυρώσετε την επιχειρηματική σας ιδέα και να λάβετε πληροφορίες από έμπειρους ανθρώπους που προέρχονται από το χώρο των μεταφορών και των επιχειρήσεων, όλα σε ένα Σαββατοκύριακο.</p>
 
@@ -271,15 +272,15 @@
               </div>
               <div id="prizes">
                </br>
-               <h2>Βραβεία</h2></br>
+               <h2>Βραβεία</h2>
                     <ul>
-                      <li class="h3">1<sup>ο</sup> Βραβείο – €900 Μετρητά</li></br>
-                      <li class="h4">2<sup>ο</sup> Βραβείο – €300 Μετρητά</li></br>
-                      <li class="h4">3<sup>ο</sup> Βραβείο – €300 Μετρητά</li>
+                      <li class="h3">1<sup>η</sup> Θέση – €900 Μετρητά</li></br>
+                      <li class="h4">2<sup>η</sup> Θέση – €300 Μετρητά</li></br>
+                      <li class="h4">3<sup>η</sup> Θέση – €300 Μετρητά</li>
                     </ul>
                   </br>
-                <p>*  Εκτός από το χρηματικό έπαθλο οι ομάδες που θα αποφασίσουν να προχωρήσουν περεταίρω στην υλοποίηση της ιδέας τους διασφαλίζουν συμβουλευτική υποστήριξη (mentoring) από τον χορηγό των χρηματικών βραβείων Link Technologies S.A.</p>
-                <p>** H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</p>
+                <p class="small">*  Εκτός από το χρηματικό έπαθλο οι ομάδες που θα αποφασίσουν να προχωρήσουν περεταίρω στην υλοποίηση της ιδέας τους διασφαλίζουν συμβουλευτική υποστήριξη (mentoring) από τον χορηγό των χρηματικών βραβείων Link Technologies S.A.</p>
+                <p class="small">** H αποδοχή και λήψη των βραβείων περιλαμβάνει την υποχρέωση πρώτης διερεύνησης χρηματοδότησης του επενδυτικού τους σχεδίου, από την Link Technologies S.A.</p>
                 </br>
                 <h3>Κριτήρια αξιολόγησης</h3>
                 </br>
